Ensure that webinterface plugin works properly with bindv6only flag on.

This is the last change for bug 238688, which can now be closed

BUG: 238688

svn path=/trunk/extragear/network/ktorrent/; revision=1146328